--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,148 @@
             </div>
         </div>
         <!-- header end -->
+
+        <div class="main-body">
+            <div class="ninth-section">
+                <div class="ninth-section-box">
+                    <div class="ninth-section-matter">
+                        <div class="ninth-section-part">
+                            <div class="x-box">
+                                <div class="x-box-item">
+                                    <div class="x-box-item-part"><img src="images/team-1.jpg" class="avatar"></div>
+                                    <div class="x-box-item-part">
+                                        <h2>Walter White</h2>
+                                        <p>Chief Executive Officer</p>
+                                        <p1>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p1>
+                                    </div>
+                                </div>
+                                <div class="x-box-item">
+                                    <div class="x-box-item-part"><img src="images/team-2.jpg" class="avatar"></div>
+                                    <div class="x-box-item-part">
+                                        <h2>Sarah Jhonson</h2>
+                                        <p>Product Manager</p>
+                                        <p1>Aut maiores voluptates amet et quis praesentium qui senda para</p1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ninth-section-part"> 
+                            <div class="x-box">
+                                <div class="x-box-item">
+                                    <div class="x-box-item-part"><img src="images/team-3.jpg" class="avatar"></div>
+                                    <div class="x-box-item-part">
+                                        <h2>William Anderson</h2>
+                                        <p>CTO</p>
+                                        <p1>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p1>
+                                    </div>
+                                </div>
+                                <div class="x-box-item">
+                                    <div class="x-box-item-part"><img src="images/team-4.jpg" class="avatar"></div>
+                                    <div class="x-box-item-part">
+                                        <h2>Amanda Jepson</h2>
+                                        <p>Accountant</p>
+                                        <p1>Dolorum tempora officiis odit laborum officiis et et accusamus</p1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+             </div>
+             <!-- ninth section end -->
+
+             <!-- .twelfth section start -->
+
+             <div class="twelfth-section">
+                <div class="contact-row1">
+                    <div class="section-title">
+                        <h2>Contact</h2>
+                        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                    </div>
+                </div>
+                <div class="contact-row2">
+                    <div class="contact-row2-box">
+                        <div class="contact-row2-matter">
+                            <div class="contact-row2-matter-1">
+                                <div class="contact-row2-address">
+                                    <div class="b-box">
+                                        <div class="b-box-all">
+                                            <div class="b-box-item">
+                                                <span class="b-icon">
+                                                    <i class="fa-solid fa-regular fa-location-dot"></i>
+                                                </span>
+                                                <span class="b-matter">
+                                                    <h2>Location:</h2>
+                                                    <p>A108 Adam Street, New York, NY 535022</p>
+                                                </span>
+                                            </div>
+                                            <div class="b-box-item">
+                                                <span class="b-icon">
+                                                    <i class="fa-solid fa-envelope-open-text"></i>
+                                                </span>
+                                                <span class="b-matter">
+                                                    <h2>Email:</h2>
+                                                    <p>info@example.com</p>
+                                                </span>
+                                            </div>
+                                            <div class="b-box-item">
+                                                <span class="b-icon">
+                                                    <i class="fa-solid fa-regular fa-phone-volume"></i>
+                                                </span>
+                                                <span class="b-matter">
+                                                    <h2>Call:</h2>
+                                                    <p>+1 5589 55488 55s</p>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="contact-row2-google-map">
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14610.282773531888!2d90.42224819999998!3d23.7270202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b7112329d313%3A0xbf15428d28d897fd!2sNotre%20Dame%20College%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1695761330027!5m2!1sen!2sbd" width="100%" height="265px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                </div>
+                            </div>
+                            <div class="contact-row2-matter-2">
+                                <form action="#">
+                                    <div class="group-field">
+                                        <div class="name-field">
+                                            <label for="Your-name">Your name</label>
+                                            <input type="text" name="Your-name" id="Your-name">
+                                        </div>
+
+                                        <div class="email-field">
+                                            <label for="Your-email">Your email</label>
+                                            <input type="text" name="Your-email" id="Your-email">
+                                        </div>
+                                    </div>
+                                    <label for="subject">subject</label>
+                                    <input type="text" name="subject" id="subject">
+
+                                    <label for="massage">massage</label>
+                                    <textarea name="massage" id="massage" cols="30" rows="10"></textarea>
+
+                                    <input type="button" value="send massage" id="send-massage">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+             </div>
+
+             <!-- .twelfth section end -->
+
+             <!-- footer start -->
+        <div class="footer">
+            <div class="footer-box">
+                <div class="footer-part">
+                    <p>© Copyright Arsha. All Rights Reserved</p>
+                </div>
+                <div class="footer-part">
+                    <p>Designed by <a href="#"> sakib</a></p>
+                </div>
+            </div>
+        </div>
+        <!-- footer end -->
+        </div>
     </div>
     
 </body>
