--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,189 @@
             </div>
         </div>
         <!-- header end -->
+        <div class="main-body">
+            <div class="eighth-section">
+                <div class="eighth-section-box">
+                    <div class="eighth-section-matter">
+                        <div class="eighth-section-part">
+                            <h2>PORTFOLIO</h2>
+                            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                        </div>
+                        <div class="eighth-section-part">
+                            <div class="eighth-section-buttons">
+                                <button>all</button>
+                                <button>app</button>
+                                <button>card</button>
+                                <button>web</button>
+                            </div>
+                        </div>
+                        <div class="eighth-section-part">
+                            <div class="eighth-section-part-box">
+                                <div class="eighth-section-part-matter">
+                                    <div class="portfolio-item">
+                                        <img src="images/portfolio-1.jpg"  alt="">
+
+                                        <div class="portfolio-caption">
+                                            <div class="portfolio-caption-matter">
+                                                <div class="portfolio-caption-matter-item">
+                                                    <h2>APP 1 <span> App</span></h2>
+                                                </div>
+                                                <div class="portfolio-caption-matter-item">
+                                                    <div class="icon-item">+</div>
+                                                    <div class="icon-item">*</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="portfolio-item">
+                                        <img src="images/portfolio-2.jpg"  alt="">
+
+                                        <div class="portfolio-caption">
+                                            <div class="portfolio-caption-matter">
+                                                <div class="portfolio-caption-matter-item">
+                                                    <h2>APP 1 <span> App</span></h2>
+                                                </div>
+                                                <div class="portfolio-caption-matter-item">
+                                                    <div class="icon-item">+</div>
+                                                    <div class="icon-item">*</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="portfolio-item">
+                                        <img src="images/portfolio-3.jpg"  alt="">
+
+                                        <div class="portfolio-caption">
+                                            <div class="portfolio-caption-matter">
+                                                <div class="portfolio-caption-matter-item">
+                                                    <h2>APP 1 <span> App</span></h2>
+                                                </div>
+                                                <div class="portfolio-caption-matter-item">
+                                                    <div class="icon-item">+</div>
+                                                    <div class="icon-item">*</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="portfolio-item">
+                                        <img src="images/portfolio-4.jpg"  alt="">
+
+                                        <div class="portfolio-caption">
+                                            <div class="portfolio-caption-matter">
+                                                <div class="portfolio-caption-matter-item">
+                                                    <h2>APP 1 <span> App</span></h2>
+                                                </div>
+                                                <div class="portfolio-caption-matter-item">
+                                                    <div class="icon-item">+</div>
+                                                    <div class="icon-item">*</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="portfolio-item">
+                                        <img src="images/portfolio-5.jpg"  alt="">
+
+                                        <div class="portfolio-caption">
+                                            <div class="portfolio-caption-matter">
+                                                <div class="portfolio-caption-matter-item">
+                                                    <h2>APP 1 <span> App</span></h2>
+                                                </div>
+                                                <div class="portfolio-caption-matter-item">
+                                                    <div class="icon-item">+</div>
+                                                    <div class="icon-item">*</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="portfolio-item">
+                                        <img src="images/portfolio-6.jpg"  alt="">
+
+                                        <div class="portfolio-caption">
+                                            <div class="portfolio-caption-matter">
+                                                <div class="portfolio-caption-matter-item">
+                                                    <h2>APP 1 <span> App</span></h2>
+                                                </div>
+                                                <div class="portfolio-caption-matter-item">
+                                                    <div class="icon-item">+</div>
+                                                    <div class="icon-item">*</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="portfolio-item">
+                                        <img src="images/portfolio-7.jpg"  alt="">
+
+                                        <div class="portfolio-caption">
+                                            <div class="portfolio-caption-matter">
+                                                <div class="portfolio-caption-matter-item">
+                                                    <h2>APP 1 <span> App</span></h2>
+                                                </div>
+                                                <div class="portfolio-caption-matter-item">
+                                                    <div class="icon-item">+</div>
+                                                    <div class="icon-item">*</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="portfolio-item">
+                                        <img src="images/portfolio-8.jpg"  alt="">
+
+                                        <div class="portfolio-caption">
+                                            <div class="portfolio-caption-matter">
+                                                <div class="portfolio-caption-matter-item">
+                                                    <h2>APP 1 <span> App</span></h2>
+                                                </div>
+                                                <div class="portfolio-caption-matter-item">
+                                                    <div class="icon-item">+</div>
+                                                    <div class="icon-item">*</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="portfolio-item">
+                                        <img src="images/portfolio-9.jpg"  alt="">
+
+                                        <div class="portfolio-caption">
+                                            <div class="portfolio-caption-matter">
+                                                <div class="portfolio-caption-matter-item">
+                                                    <h2>APP 1 <span> App</span></h2>
+                                                </div>
+                                                <div class="portfolio-caption-matter-item">
+                                                    <div class="icon-item">+</div>
+                                                    <div class="icon-item">*</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+             </div>
+             <!-- eighth section end -->
+
+             <!-- footer start -->
+        <div class="footer">
+            <div class="footer-box">
+                <div class="footer-part">
+                    <p>© Copyright Arsha. All Rights Reserved</p>
+                </div>
+                <div class="footer-part">
+                    <p>Designed by <a href="#"> sakib</a></p>
+                </div>
+            </div>
+        </div>
+        <!-- footer end -->
+        </div>
     </div>
     
 </body>
