--- a/team.html
+++ b/team.html
@@ -29,6 +29,70 @@
             </div>
         </div>
         <!-- header end -->
+
+        <div class="main-body">
+            <!-- ninth section start -->
+            <div class="ninth-section">
+                <div class="ninth-section-box">
+                    <div class="ninth-section-matter">
+                        <div class="ninth-section-part">
+                            <div class="x-box">
+                                <div class="x-box-item">
+                                    <div class="x-box-item-part"><img src="images/team-1.jpg" class="avatar"></div>
+                                    <div class="x-box-item-part">
+                                        <h2>Walter White</h2>
+                                        <p>Chief Executive Officer</p>
+                                        <p1>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p1>
+                                    </div>
+                                </div>
+                                <div class="x-box-item">
+                                    <div class="x-box-item-part"><img src="images/team-2.jpg" class="avatar"></div>
+                                    <div class="x-box-item-part">
+                                        <h2>Sarah Jhonson</h2>
+                                        <p>Product Manager</p>
+                                        <p1>Aut maiores voluptates amet et quis praesentium qui senda para</p1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ninth-section-part"> 
+                            <div class="x-box">
+                                <div class="x-box-item">
+                                    <div class="x-box-item-part"><img src="images/team-3.jpg" class="avatar"></div>
+                                    <div class="x-box-item-part">
+                                        <h2>William Anderson</h2>
+                                        <p>CTO</p>
+                                        <p1>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p1>
+                                    </div>
+                                </div>
+                                <div class="x-box-item">
+                                    <div class="x-box-item-part"><img src="images/team-4.jpg" class="avatar"></div>
+                                    <div class="x-box-item-part">
+                                        <h2>Amanda Jepson</h2>
+                                        <p>Accountant</p>
+                                        <p1>Dolorum tempora officiis odit laborum officiis et et accusamus</p1>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+             </div>
+             <!-- ninth section end -->
+
+             <!-- footer start -->
+        <div class="footer">
+            <div class="footer-box">
+                <div class="footer-part">
+                    <p>© Copyright Arsha. All Rights Reserved</p>
+                </div>
+                <div class="footer-part">
+                    <p>Designed by <a href="#"> sakib</a></p>
+                </div>
+            </div>
+        </div>
+        <!-- footer end -->
+        </div>
     </div>
     
 </body>
