--- a/about.html
+++ b/about.html
@@ -29,6 +29,44 @@
             </div>
         </div>
         <!-- header end -->
+        <div class="main-body">
+            <section class="third-section">
+                <div class="third-section-margin-left-minus-2">
+                    <div class="third-section-matter">
+                        <div class="title-row">
+                            <h2>About Us</h2>
+                        </div>
+                        <div class="body-row">
+                            <div class="body-row-part">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <ul>
+                                    <li> >> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+                                    <li> >>Duis aute irure dolor in reprehenderit in voluptate velit</li>
+                                    <li> >>Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+                                </ul>
+                            </div>
+                            <div class="body-row-part">
+                                <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <button>Learn More</button>
+                            </div>
+                        </div>
+                    </div>    
+                </div>
+            </section>
+
+            <!-- footer start -->
+        <div class="footer">
+            <div class="footer-box">
+                <div class="footer-part">
+                    <p>© Copyright Arsha. All Rights Reserved</p>
+                </div>
+                <div class="footer-part">
+                    <p>Designed by <a href="#"> sakib</a></p>
+                </div>
+            </div>
+        </div>
+        <!-- footer end -->
+        </div>
     </div>
     
 </body>
