--- a/drop-down.html
+++ b/drop-down.html
@@ -29,6 +29,19 @@
             </div>
         </div>
         <!-- header end -->
+
+        <!-- footer start -->
+        <div class="footer">
+            <div class="footer-box">
+                <div class="footer-part">
+                    <p>© Copyright Arsha. All Rights Reserved</p>
+                </div>
+                <div class="footer-part">
+                    <p>Designed by <a href="#"> sakib</a></p>
+                </div>
+            </div>
+        </div>
+        <!-- footer end -->
     </div>
     
 </body>
