--- a/index.html
+++ b/index.html
@@ -202,6 +202,19 @@
                                 <div class="s-box-item"></div>
                                 <div class="s-box-item"></div>
                             </div>
+
+                            <div class="progressbar">
+                                <div class="progress-1">
+                                    <div class="progress-1-1">50%</div>
+                                </div>
+
+                                <div class="progress-1">
+                                    <div class="progress-1-2">30%</div>
+                                </div>
+
+                                <label for=""> progress Bar 1 (32%)</label>
+                                <progress file="p1" value="32" max="100">32</progress>
+                            </div>
                         </div>
                     </div>
                 </div>
